# glsl-sandbox

./: CMakeLists.txt  README.md
circles/: CMakeLists.txt  main.cc
circles/resources/: transition.frag  transition.mat
ghost/: .syntastic_cpp_config  CMakeLists.txt  ghost.cc  main.cc
ghost/resources/: blur.frag  blur.mat
ripple/: CMakeLists.txt  main.cc
ripple/resources/: ripple.frag  ripple.mat  ripple.vert
